[project]
name = "vol-dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "yttty",email = "yttty@users.noreply.github.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "requests (>=2.32.5,<3.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "dash (>=3.2.0,<4.0.0)",
    "dash-bootstrap-components (>=2.0.4,<3.0.0)",
    "plotly (>=6.3.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
